# kbforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/context/: knowledge-base-design.md
docs/design/: 2026-07-18-agent-facing-artifact-contract-design.md  2026-07-18-datacontract-bridge-design.md  2026-07-19-agentic-ingest-design.md  2026-07-19-llm-synthesizer-design.md
docs/plans/: 2026-07-19-llm-synthesizer.md
docs/superpowers/plans/: 2026-07-18-agent-facing-artifact-contract.md  2026-07-19-deterministic-pipeline-backbone.md
docs/superpowers/specs/: 2026-07-11-repo-scaffold-design.md  2026-07-18-agent-facing-artifact-contract-design.md  2026-07-18-datacontract-bridge-design.md  2026-07-19-agentic-ingest-design.md
examples/: README.md
examples/github-issues-connector/: README.md  pyproject.toml
examples/github-issues-connector/kbforge_github_issues/: __init__.py
examples/github-issues-connector/tests/: test_connector.py
src/kbforge/: __init__.py  __main__.py  canonical.py  hookspecs.py  llm_synthesizer.py  mirror.py  models.py  pipeline.py  registry.py  synthesize.py  validate.py
src/kbforge/connectors/: git_commits.py  local_files.py
src/kbforge/publishers/: dry_run.py
tests/: conftest.py  test_canonical.py  test_cli.py  test_dry_run_publisher.py  test_git_commits_connector.py  test_import.py  test_ingest_models.py  test_llm_live.py  test_llm_synthesizer.py  test_local_files_connector.py  test_mirror.py  test_models.py  test_pipeline.py  test_strict_okf.py  test_synthesize.py  test_validate.py
